--- a/css-sass/pages/_index.scss
+++ b/css-sass/pages/_index.scss
@@ -196,7 +196,7 @@
     }
 
     .title {
-      margin-top: 3%;
+      margin-top: 7%;
       display: flex;
       flex-direction: column;
       justify-content: center;
