--- a/css-sass/pages/_landing.scss
+++ b/css-sass/pages/_landing.scss
@@ -70,6 +70,10 @@
       }
     }
 
+    .title2 {
+      margin-top: 15%;
+    }
+
     .section-1 {
       .image {
         background: url(/Photography-Project/assets/img/img-9.jpg) no-repeat
